--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,7 @@ kotlin.code.style=official
 kotlin.internal.collectFUSMetrics=false
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
 org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.parallel=true
