--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI
 run-name: CI
 on: [ push ]
 jobs:
-  build:
+  buildAndTest:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
@@ -32,3 +32,12 @@ jobs:
         run: |
           chmod +x gradlew
           gradle assemble
+
+      - name: Test library
+        run: |
+          gradle check
+
+      - name: Run integration tests
+        working-directory: ./test
+        run: |
+          gradle check
