--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,12 @@ jobs:
           distribution: 'temurin'
           java-version: 17
 
+      - name: Cache .konan
+        uses: actions/cache@v4
+        with:
+          path: ~/.konan
+          key: ${{ runner.os }}-konan
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
