--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,6 +58,7 @@ jobs:
           path: build/dokka/html
 
   deployDocs:
+    needs: buildAndTest
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
 
