--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,7 @@ run-name: CI
 on: [ push ]
 jobs:
   buildAndTest:
+    name: Build and test
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
@@ -58,6 +59,7 @@ jobs:
           path: build/dokka/html
 
   deployDocs:
+    name: Deploy docs
     needs: buildAndTest
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
