--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,8 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
+    env:
+      GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m"
     steps:
       - uses: actions/checkout@v2
       - name: Setup Java
@@ -33,24 +35,24 @@ jobs:
       - name: Build library
         run: |
           chmod +x gradlew
-          ./gradlew assemble -Dorg.gradle.jvmargs="-Xmx4g -XX:MaxMetaspaceSize=512m"
+          ./gradlew assemble
 
       - name: Build tests
         working-directory: ./test
         run: |
           chmod +x gradlew
-          ./gradlew assemble -Dorg.gradle.jvmargs="-Xmx4g -XX:MaxMetaspaceSize=512m"
+          ./gradlew assemble
 
       - name: Test library
-        run: ./gradlew check -Dorg.gradle.jvmargs="-Xmx4g -XX:MaxMetaspaceSize=512m"
+        run: ./gradlew check
 
       - name: Run integration tests
         working-directory: ./test
-        run: ./gradlew check -Dorg.gradle.jvmargs="-Xmx4g -XX:MaxMetaspaceSize=512m"
+        run: ./gradlew check
 
       - name: Generate dokka docs
         if: ${{ matrix.os == 'macos-latest' }}
-        run: ./gradlew dokkaGenerate -Dorg.gradle.jvmargs="-Xmx4g -XX:MaxMetaspaceSize=512m"
+        run: ./gradlew dokkaGenerate
 
       - name: Upload docs
         if: ${{ matrix.os == 'macos-latest' && github.ref == 'refs/heads/main' }}
