--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,9 @@ ksp = "2.2.0-2.0.2"
 kotlinx-serialization = "1.9.0"
 buildconfig = "5.6.7"
 kotlinpoet = "2.2.0"
-shadow = "9.0.0-rc1"
+shadow = "9.0.1"
 dokka = "2.0.0"
-publishing-plugin = "0.24.0"
+publishing-plugin = "0.34.0"
 
 [libraries]
 ksp-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
