--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,16 +12,16 @@ jobs:
       GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m"
     steps:
       - uses: actions/checkout@v2
-      #      - name: Setup Java 17
-      #        uses: actions/setup-java@v4
-      #        with:
-      #          distribution: 'temurin'
-      #          java-version: 17
-      #      - name: Setup Java 24
-      #        uses: actions/setup-java@v4
-      #        with:
-      #          distribution: 'temurin'
-      #          java-version: 24
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+      - name: Setup Java 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 24
 
       - name: Cache .konan
         uses: actions/cache@v4
