--- a/test/gradle.properties
+++ b/test/gradle.properties
@@ -1,2 +1,7 @@
 kotlin.code.style=official
 kotlin.internal.collectFUSMetrics=false
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.parallel=true
+org.gradle.vfs.watch=true
