--- a/test/gradle.properties
+++ b/test/gradle.properties
@@ -1,5 +1,6 @@
 kotlin.code.style=official
 kotlin.internal.collectFUSMetrics=false
+kotlin.js.yarn=false
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configuration-cache=true
