Split out publishing step

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ run-name: CI
 on: [ push ]
 jobs:
   buildAndTest:
-    name: Build, test, and publish
+    name: Build and test
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
@@ -57,17 +57,44 @@ jobs:
         working-directory: ./test
         run: ./gradlew check
 
+  publishSnapshot:
+    name: Publish snapshot
+    needs: buildAndTest
+    runs-on: macos-latest
+    if: ${{ github.ref == 'refs/heads/main' && endsWith(needs.buildAndTest.outputs.version, '-SNAPSHOT') }}
+    env:
+      GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m"
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+      - name: Setup Java 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 24
+
+      - name: Cache .konan
+        uses: actions/cache@v4
+        with:
+          path: ~/.konan
+          key: ${{ runner.os }}-konan
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
+          build-scan-publish: true
+          build-scan-terms-of-use-url: 'https://gradle.com/terms-of-service'
+          build-scan-terms-of-use-agree: 'yes'
+
       - name: Generate dokka docs
-        if: ${{ matrix.os == 'macos-latest' }}
         run: ./gradlew dokkaGenerate
 
-      - name: Get version
-        id: get-version
-        if: ${{ matrix.os == 'macos-latest' && github.ref == 'refs/heads/main' }}
-        run: echo "version=$(cat version.txt)" >> "$GITHUB_OUTPUT"
-
       - name: Publish to staging
-        if: ${{ matrix.os == 'macos-latest' && github.ref == 'refs/heads/main' && endsWith(steps.get-version.outputs.version, '-SNAPSHOT') }}
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.ORG_GRADLE_PROJECT_MAVENCENTRALUSERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.ORG_GRADLE_PROJECT_MAVENCENTRALPASSWORD }}
@@ -77,14 +104,13 @@ jobs:
         run: ./gradlew publishAllPublicationsToMavenCentralRepository --no-configuration-cache
 
       - name: Upload docs
-        if: ${{ matrix.os == 'macos-latest' && github.ref == 'refs/heads/main' && endsWith(steps.get-version.outputs.version, '-SNAPSHOT') }}
         uses: actions/upload-pages-artifact@v3
         with:
           path: build/dokka/html
 
   deployDocs:
     name: Deploy snapshot docs
-    needs: [ buildAndTest ]
+    needs: [ buildAndTest, publishSnapshot ]
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' && endsWith(needs.buildAndTest.outputs.version, '-SNAPSHOT') }}
 
