--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -96,7 +96,9 @@ jobs:
           build-scan-terms-of-use-agree: 'yes'
 
       - name: Generate dokka docs
-        run: ./gradlew dokkaGenerate
+        run: |
+          chmod +x gradlew
+          ./gradlew dokkaGenerate
 
       - name: Publish to staging
         env:
