--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -26,7 +26,7 @@
       "matchPackageNames": [
         "org.jetbrains.kotlin.**"
       ],
-      "allowedVersions": "/.*(?:Beta.|RC)/i"
+      "allowedVersions": "/.*(?:Beta.|RC)/"
     }
   ],
   enabledManagers: [
