Try another attempt at getting eaps

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -12,6 +12,15 @@
   assignees: [
     "rnett"
   ],
+  "packageRules": [
+    {
+      "matchPackageNames": [
+        "/org.jetbrains.kotlin:.*/"
+      ],
+      "versioning": "regex",
+      "versioningTemplate": "/^.*$/"
+    }
+  ],
   enabledManagers: [
     "gradle",
     "gradle-wrapper"
