--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -15,7 +15,7 @@
   "packageRules": [
     {
       "matchPackageNames": [
-        "*"
+        "org.jetbrains.kotlin:kotlin-gradle-plugin"
       ],
       "allowedVersions": "/.*/"
     }
