--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,9 +3,6 @@
   "extends": [
     "config:recommended"
   ],
-  labels: [
-    "renovate"
-  ],
   reviewers: [
     "rnett"
   ],
@@ -15,7 +12,12 @@
   "packageRules": [
     {
       "matchPackageNames": [
-        "org.jetbrains.kotlin:kotlin-gradle-plugin"
+        "org.jetbrains.kotlin:kotlin-gradle-plugin",
+        "com.google.devtools.ksp:symbol-processing-api"
+      ],
+      groupName: "kotlin",
+      labels: [
+        "kotlin"
       ],
       "allowedVersions": "/.*/",
       "ignoreUnstable": false
