--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,6 +9,7 @@
   assignees: [
     "rnett"
   ],
+  "pruneStaleBranches": false,
   "packageRules": [
     {
       "matchPackageNames": [
@@ -19,6 +20,7 @@
       labels: [
         "kotlin"
       ],
+      branchPrefix: "kotlin-update/",
       "allowedVersions": "/.*/",
       "ignoreUnstable": false
     }
