Disable automerge for kotlin PRs

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -22,7 +22,8 @@
       ],
       branchPrefix: "kotlin-update/",
       "allowedVersions": "/.*/",
-      "ignoreUnstable": false
+      "ignoreUnstable": false,
+      automerge: false
     }
   ],
   enabledManagers: [
