--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -23,7 +23,8 @@
       branchPrefix: "kotlin-update/",
       "allowedVersions": "/.*/",
       "ignoreUnstable": false,
-      automerge: false
+      automerge: false,
+      draftPR: true
     }
   ],
   enabledManagers: [
