Apply kotlin updates to branches, too

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -24,7 +24,12 @@
       "allowedVersions": "/.*/",
       "ignoreUnstable": false,
       automerge: false,
-      draftPR: true
+      draftPR: true,
+      baseBranchPatterns: [
+        "main",
+        "renovate/kotlin",
+        "kotlin-update/*"
+      ]
     }
   ],
   enabledManagers: [
