--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,6 +56,19 @@ jobs:
             exit 1
           fi
 
+      - name: Build
+        run: |
+          ./gradlew assemble
+
+      - name: Generate dokka docs
+        run: |
+          ./gradlew dokkaGenerate
+
+      - name: Upload docs
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: build/dokka/html
+
       - name: Publish to Maven Central
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.ORG_GRADLE_PROJECT_MAVENCENTRALUSERNAME }}
@@ -63,7 +76,7 @@ jobs:
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYID }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYPASSWORD }}
-        run: ./gradlew :publishAndReleaseToMavenCentral --no-configuration-cache
+        run: ./gradlew publishAndReleaseToMavenCentral --no-configuration-cache
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -71,3 +84,18 @@ jobs:
           tag_name: ${{ steps.get-version.outputs.version }}
           name: ${{ steps.get-version.outputs.version }}
           generate_release_notes: true
+
+  deployDocs:
+    name: Deploy docs
+    runs-on: ubuntu-latest
+    needs: release
+
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    steps:
+      - name: Deploy docs
+        uses: actions/deploy-pages@v4
