--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlin = "2.2.21"
-ksp = "2.2.20-2.0.3"
+ksp = "2.3.3"
 kotlinx-serialization = "1.9.0"
 buildconfig = "6.0.6"
 kotlinpoet = "2.2.0"
