Fully use kcp-development

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ kotlinpoet = "2.2.0"
 shadow = "9.3.0"
 dokka = "2.1.0"
 publishing-plugin = "0.35.0"
-kcp-development = "0.0.1-SNAPSHOT"
+kcp-development = "0.0.1"
 
 [libraries]
 ksp-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
