--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,16 +14,14 @@ jobs:
       version: ${{ steps.get-version.outputs.version }}
     steps:
       - uses: actions/checkout@v6
-      - name: Setup Java 17
+
+      - name: Setup Java 17 and 24
         uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
-          java-version: 17
-      - name: Setup Java 24
-        uses: actions/setup-java@v5
-        with:
-          distribution: 'temurin'
-          java-version: 24
+          java-version: |
+            17
+            24
 
       - name: Cache .konan
         uses: actions/cache@v4
