--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,17 +24,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java 17
+      - name: Setup Java 17 and 24
         uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
-          java-version: 17
-
-      - name: Setup Java 24
-        uses: actions/setup-java@v5
-        with:
-          distribution: 'temurin'
-          java-version: 24
+          java-version: |
+            17
+            24
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
