Start converting to analysis api

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,7 +3,7 @@
   "extends": [
     "config:recommended"
   ],
-  assignees: [
+  "assignees": [
     "rnett"
   ],
   "pruneStaleBranches": false,
@@ -14,16 +14,16 @@
         "org.jetbrains.kotlin:kotlin-gradle-plugin",
         "com.google.devtools.ksp:symbol-processing-api"
       ],
-      groupName: "kotlin",
-      labels: [
+      "groupName": "kotlin",
+      "labels": [
         "kotlin"
       ],
-      branchPrefix: "kotlin-update/",
+      "branchPrefix": "kotlin-update/",
       "allowedVersions": "/.*/",
       "ignoreUnstable": false,
-      automerge: false,
-      draftPR: true,
-      baseBranchPatterns: [
+      "automerge": false,
+      "draftPR": true,
+      "baseBranchPatterns": [
         "main",
         "renovate/kotlin",
         "kotlin-update/*"
